<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TimeMonkey!</string>
    <string name="app_name">TimeMonkey</string>
    <string name="error_toast">Error! Don\'t panic!</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="project_prompt">Please select project</string>
    <string name="task_prompt">Please select task</string>
    <string name="btnTimer_Start">Start</string>
    <string name="btnTimer_Stop">Stop</string>
    <string name="started_at">Started at:</string>
    <string name="started_at_time">00:00:00</string>
    <string name="timer_not_started">(not started)</string>
    <string name="btnNewTask">Add Task</string>
    <string name="btnNewNote">Add Note</string>
    
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">SpengDroid has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
        
    <string name="crash_dialog_title">SpengDroid has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="menu_refresh_feed">Refresh feed</string>
</resources>
