<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/project_prompt"
            />
    <Spinner android:id="@+id/ProjectSpinner" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            />
    <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/task_prompt"
            />
    <Spinner android:id="@+id/TaskSpinner" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            />
    <Button android:text="@string/btnTimer_Start" 
            android:id="@+id/btnStartStopTimer" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            />
    <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/started_at"
            />
    <TextView android:id="@+id/StartTime" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dip"
            android:text="@string/timer_not_started"
            />
</LinearLayout>
